--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,13 +57,10 @@
     <a class="nav prev" href="#"></a>
     <div class="carousel_items_holder">
         <ul class="carousel_items">
-          <li><%= image_tag("school.png")%></li>
-          <li><%= image_tag("school.png")%></li>
-          <li><%= image_tag("school.png")%></li>
-          <li><%= image_tag("school.png")%></li>
-          <li><%= image_tag("school.png")%></li>
-          <li><%= image_tag("school.png")%></li>
-          <li><%= image_tag("school.png")%></li>
+          <li><%= image_tag("school-1.jpg")%></li>
+          <li><%= image_tag("school-2.jpg")%></li>
+          <li><%= image_tag("school-3.png")%></li>
+          <li><%= image_tag("school-4.jpg")%></li>
         </ul>
     </div>
     <a class="nav next" href="#"></a>
