teahcer upload course attachment

--- a/app/views/teachers/my_courses.html.erb
+++ b/app/views/teachers/my_courses.html.erb
@@ -5,7 +5,7 @@
   	<div class="nav-bar">
   		<span class="btn btn-primary by-btn-bg">课程中心</span>
   	</div>
-  	<ul id="coursesList" class="courses-list cl-sm-12">
+  	<ul id="subCoursesList" class="courses-list cl-sm-12">
       <% if @courses.blank? %>
         <div class="blank">没有课程</div>
       <% else %>
