--- a/app/views/teachers/get_sub_course.js.erb
+++ b/app/views/teachers/get_sub_course.js.erb
@@ -1,1 +1,1 @@
-$("#coursesList").replaceWith('<%= escape_javascript( render :partial => "sub_course",:locals => {:sub_courses => @sub_courses}) %>');
+$("#subCoursesList").replaceWith('<%= escape_javascript( render :partial => "sub_course",:locals => {:sub_courses => @sub_courses}) %>');
