--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -1066,22 +1066,10 @@ body.teachers__show_score {
       }
 
 		}
-		//成绩查询
-		div.search-step {
-			padding: 20px;
-			
-			
-		}
-		.condition-row {
-			padding: 20px;
-		}
-
-		.search-score-btn{
-			padding: 20px;
-			text-align: center;
-			.btn-lg {
-				padding-right:20px;
-			}
+		
+		img.edit-teacher-image {
+			max-height: 100px;
+			max-width: 100px;
 		}
 
      //成绩查询
