--- a/app/views/common/_common_select.html.erb
+++ b/app/views/common/_common_select.html.erb
@@ -1,6 +1,6 @@
 <%= f.input :academy_id, collection: [['请选择系别','']] + Academy.all.pluck(:name,:id), 
-	as: :select, include_blank: false, input_html: { id: "common_academy_id" } %>
+	as: :select, include_blank: false, label: "学院" ,input_html: { id: "common_academy_id" } %>
 <%= f.input :specialty_id, collection: [['请选择专业','']] + @specialties,
-	as: :select, include_blank: false, input_html: {id: "common_specialty_id"} %>
+	as: :select, include_blank: false,label: "专业", input_html: {id: "common_specialty_id"} %>
 <%= f.association :grade, collection: [['请选择班级','']] + @grades, 
-	as: :select, include_blank: false, input_html: {id: "common_grade_id"} %>
+	as: :select, include_blank: false, label: "班级", input_html: {id: "common_grade_id"} %>
