--- a/app/views/teachers/my_account.html.erb
+++ b/app/views/teachers/my_account.html.erb
@@ -22,13 +22,14 @@
             <%= image_tag(current_teacher.show_image, class: "img-thumbnail edit-teacher-image") %>
           </div>
 		  		<%= f.input :avatar, as: :file, label: "我的头像" %>
-          <%= render :partial => "common/common_select", locals: {f: f} %>
+          <%= f.association :academy, collection: [['请选择院系','']] + Academy.all.pluck(:name,:id), 
+          as: :select, include_blank: false, label: "所属学院" %>
           <%= f.input :final_degree, label: "专业技术职位" %>
           <%= f.input :qualification, label: "资格证书" %>
           <%= f.input :final_education, collection: Teacher.final_educations, prompt: "请选择学位", label: "我的学历" %>
           <%= f.input :tec_expertise, label: "教学与技术专长" %>
-          <%= f.input :phone, label: "手机号码" %>
-          <%= f.input :sex, as: :radio_buttons, collection: ["男", "女"], label: "性别" %>
+          <%= f.input :phone, label: "手机号码",required: false %>
+          <%= f.input :sex, as: :radio_buttons, collection: ["男", "女"], label: "性别", item_wrapper_class: "radio-inline" %>
           <%= f.input :signature, label: "个性签名" %>
 		  		<div class="col-sm-6 col-sm-offset-3">
             <%= f.submit "确认修改", class: "btn btn-success" %>
