--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -5,7 +5,7 @@
   <ul class="teachers-list">
     <% @teachers.each do |teacher|%>
       <li>
-        <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number)%>
+        <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number)  if teacher.image%>
       </li>
     <%end%>
   </ul>
