--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -57,8 +57,8 @@
           <div class="teachers">
             <% @teacher_courses.each do |teacher_course|%>
               <div class="teacher-info">
-                 <%#= link_to image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_60)), show_teachers_path(teacher_course.teacher.number)%>
-                 <p><%= teacher_course.teacher.name %></p>
+                 <%= link_to image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_60)), show_teachers_path(teacher_course.teacher.number) if teacher_course.try(:teacher).try(:image).present? %>
+                 <p><%= teacher_course.try(:teacher).try(:name) %></p>
               </div>
             <% end %>
           </div>
