--- a/app/views/admin/teachers/index.html.erb
+++ b/app/views/admin/teachers/index.html.erb
@@ -22,8 +22,9 @@
 <table class="table table-hover table-bordered text-center">
   <thead>
     <tr>
-      <th class="text-center">手机号</th>
       <th class="text-center">头像</th>
+      <th class="text-center">手机号</th>
+      <th class="text-center">姓名</th>
       <th class="text-center">学院</th>
       <th class="text-center">学历</th>
       <th class="text-center">专业技术职位</th>
