--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -32,6 +32,18 @@
       <%= f.text_field :username, class: 'form-control' %>
     </div>
   </div>
+   <div class="form-group">
+    <%= f.label :password, '密码', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.password_field :password, class: 'form-control' %>
+    </div>
+  </div>
+   <div class="form-group">
+    <%= f.label :password_confirmation, '确认密码', class: 'col-sm-2 control-label' %>
+    <div class="col-sm-4">
+      <%= f.password_field :password_confirmation, class: 'form-control' %>
+    </div>
+  </div>
   <div class="form-group">
     <%= f.label :name, '姓名', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
