--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,6 +57,8 @@
     <a class="nav prev" href="#"></a>
     <div class="carousel_items_holder">
         <ul class="carousel_items">
+          <!-- 图片数量尽量大于5张 -->
+          <li><%= image_tag("school-4.jpg")%></li>
           <li><%= image_tag("school-1.jpg")%></li>
           <li><%= image_tag("school-2.jpg")%></li>
           <li><%= image_tag("school-3.png")%></li>
