--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :script do %>
+  <%= javascript_include_tag "_teachers", 'data-turbolinks-track' => true %>
+<%end%>
+
 <div class="main-content">
   <section class="common-title">
   	<span class="pull-left">教师风采</span>
@@ -5,7 +9,8 @@
   <ul class="teachers-list">
     <% @teachers.each do |teacher|%>
       <li>
-        <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number)  if teacher.image%>
+        <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number) if teacher.image%>
+        <p>国家优秀教师称号</p>
       </li>
     <%end%>
   </ul>
