--- a/app/views/admin/common/_left.html.erb
+++ b/app/views/admin/common/_left.html.erb
@@ -11,6 +11,11 @@
       <%end%>
     </li>
     <li>
+      <%= link_to admin_users_path do %>
+        <span class="glyphicon glyphicon-home">学生列表</span>
+      <%end%>
+    </li>
+    <li>
       <%= link_to "" do %>
         <span class="glyphicon glyphicon-home">首页</span>
       <%end%>
