--- a/app/views/teachers/_left_bar.html.erb
+++ b/app/views/teachers/_left_bar.html.erb
@@ -44,7 +44,7 @@
       <li>
         <%= link_to my_account_teachers_path do %>
           <i class="glyphicon glyphicon-cog"></i>
-          <span>教师介绍</span>
+          <span>我的账户</span>
         <%end%>
       </li>
     </ul>
