--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -3,10 +3,10 @@
     <a href="<%= admin_root_path%>">后台</a>
   </li>
   <li>
-    <a href="<%= admin_teachers_path%>">教师列表</a>
+    <a href="<%= admin_users_path%>">学生列表</a>
   </li>
   <li>
-    <a href="<%= admin_teacher_path(@teacher)%>"><%= @teacher.name %></a>
+    <a href="<%= admin_user_path(@user)%>"><%= @user.name %></a>
   </li>
   <li class="active">修改</li>
   <hr></hr>
