--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -3,7 +3,7 @@
     get_specialties_path = "<%= get_specialties_user_index_path %>"
     get_grades_path = "<%= get_grades_user_index_path %>"
   <% end %>
-  <%= javascript_include_tag "_user_show" %>
+  <%= javascript_include_tag "_user_show", 'data-turbolinks-track' => true %>
 <% end %>
 <%= simple_form_for([:admin, @user], html: {class: "form-horizontal"}) do |f| %>
   <%= f.input :nickname %>
