--- a/app/views/teachers/grade_students.html.erb
+++ b/app/views/teachers/grade_students.html.erb
@@ -12,7 +12,7 @@
         <% @grade.users.each do |user| %>
           <li class="grade">
             <%= image_tag user.show_image %>
-            <div><%= user.name %></div>
+            <p><%= user.name %></p>
           </li>
         <%end%>
       </ul>
