--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -25,7 +25,7 @@
 	</div>
 
 	<!-- footer -->
-	<%= render :partial => "/common/footer" %>
+	<%= render :partial => "/common/login_footer" %>
 	<!-- footer -->
 </body>
 </html>
