--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -2,7 +2,7 @@
 	<div class="wrapper">
 		<p class="navbar-text outer">
 		  <a class="navbar-link" href="#">
-		  	<%= image_tag "logo.jpg", alt: "上海工商职业技术学院"%>
+		  	<%= link_to image_tag("logo.jpg"), root_path, alt: "上海工商职业技术学院"%>
 		  </a>
 
 			<nav class="collapse navbar-collapse bs-navbar-collapse">
