real attachment url

--- a/app/views/sub_courses/show.html.erb
+++ b/app/views/sub_courses/show.html.erb
@@ -3,7 +3,7 @@
 		<div class="video-content">
 			<!-- video -->
 			<video width="860" height="500" class="mejs-player" poster="/assets/course-show.png" controls="controls" preload="none">
-				<source type="video/mp4" src="http://7xj8j2.com1.z0.glb.clouddn.com/images/files/3/_邓紫棋_喜欢你_hd.mp4" />
+				<source type="video/mp4" src="<%= @sub_course.attachment.content.url %>" />
 				<source type="video/webm" src="myvideo.webm" />
 				<source type="video/ogg" src="myvideo.ogv" />
 			</video>
