--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -158,6 +158,7 @@ body.home__index {
 			a.img {
 				width: 345px;
 				height: 230px;
+				width: 100%;
 				display: block;
 				overflow: hidden;
 			}
