--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -10,7 +10,7 @@
     <% @teachers.each do |teacher|%>
       <li>
         <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number) if teacher.image%>
-        <p>国家优秀教师称号</p>
+        <p><%= teacher.name %>(<%= teacher.final_degree%>)</p>
       </li>
     <%end%>
   </ul>
