--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
   	<!--<span class="pull-right common"><%= link_to "更多", "#", class: "more" %></span>-->
   </section>
   <section class="department-tabs">
-    <span><%= link_to "全部", root_path, class: "first-tab factive"%></span>
+    <span class="first"><%= link_to "全部", select_courses_home_path, remote: true, class: "first-tab factive"%></span>
     <% @academies.each_with_index do |academy, index| %>
       <span class="tab-select-span"><%= link_to academy.name, select_courses_home_path(academy_id: academy.id), remote: true, class: 'common-tab', style: "left: #{index * 118 + 68 }px" %></span>
     <% end %>
@@ -68,15 +68,3 @@
     <a class="nav next" href="#"></a>
   </div>
 </div>
-<script type="text/javascript">
-  $(function(){
-    $(".department-tabs span.tab-select-span").each(function(){
-      var _this = $(this);
-      _this.click(function(){
-        _this.find("a").addClass("active");
-        _this.siblings().find("a").removeClass("active");
-        $(".department-tabs span:eq(0) a").removeClass("factive");
-      })
-    });
-  });
-</script>
