--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -495,7 +495,7 @@ body.courses__show, body.courses__after_class {
 			padding: 20px 30px;
 			background: #fff;
 			.courses-list {
-				height: 200px;
+				position: relative;
 				overflow: hidden;
 				li {
 					overflow: hidden;
@@ -540,7 +540,7 @@ body.courses__show, body.courses__after_class {
 			height: 24px;
 			width: 100px;
 			line-height: 24px;
-			margin-top: 20px;
+			margin-top: 10px;
 			text-align: center;
 			display: block;
 			background: image-url("drop-down-arrow.png") no-repeat 12px 0;
