--- a/app/assets/stylesheets/application/global.css.scss
+++ b/app/assets/stylesheets/application/global.css.scss
@@ -7,6 +7,15 @@
   overflow: hidden;
 }
 
+/*面包屑背景*/
+.breadcrumb {
+  background-color: #fff;
+  border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  -o-border-radius: 0;
+}
+
 body {
   background: #ebebeb;
 }
@@ -34,10 +43,10 @@ form {
 }
 
 
-  .blank {
-    height: 100px;
-    font-size: 30px;
-    text-align:center;//居中 
-    padding: 10px;
-    color: #808080;               
-  }
+.blank {
+  height: 100px;
+  font-size: 30px;
+  text-align:center;//居中
+  padding: 10px;
+  color: #808080;
+}
