--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -11,6 +11,14 @@
   <%= render partial: "/common/lunbo"%>
 <%end%>
 
+<% content_for :crumbs do%>
+  <ol class="breadcrumb">
+    <li><span class="glyphicon glyphicon-home">&nbsp;</span>当前位置</li>
+    <li><%= link_to "首页", root_path %></li>
+    <li class="active"><%= @course.name %></li>
+  </ol>
+<% end %>
+
 <div class="main-content">
   <div class="top-content">
 
